opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/ppx_demo"
bug-reports: "https://github.com/janestreet/ppx_demo/issues"
dev-repo: "git+https://github.com/janestreet/ppx_demo.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/ppx_demo/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "core"
  "core_kernel"
  "dedent"
  "expect_test_helpers_core"
  "ppx_here"
  "ppx_jane"
  "ppx_module_timer"
  "ppxlib_jane"
  "re2"
  "dune"                     {>= "3.17.0"}
  "ppxlib"                   {>= "0.33.0" & < "0.36.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "PPX that exposes the source code string of an expression/module structure."
description: "
PPX that exposes the source code string of an expression/module structure.
"
